--- a/android/src/main/res/layout/datepicker_view.xml
+++ b/android/src/main/res/layout/datepicker_view.xml
@@ -12,14 +12,14 @@
     <RelativeLayout
         android:id="@+id/wheelsWrapper"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="160dp"
         android:layout_centerHorizontal="true"
         android:foregroundGravity="center"
         >
         <cn.carbswang.android.numberpickerview.library.NumberPickerView
             android:id="@+id/year"
             android:layout_width="wrap_content"
-            android:layout_height="160dp"
+            android:layout_height="match_parent"
             app:npv_ShowCount="5"
             app:npv_RespondChangeOnDetached="false"
             app:npv_TextSizeNormal="18sp"
